2010-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXDisplayImage): The display '-update'
	option was only working in conjunction with the '-delay' option
	with a delay setting of 2 or greater.  Problem reported by Sami
	Liedes.  Patch by Vincent MAUGE.  Resolves Debian bug ID 414779.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Only apply scene substitution to
	the filename if adjoin is false.

	* magick/constitute.c (WriteImage): If adjoin is true, then
	restore original filename specification since opening the blob
	modifies it.  Resolves Debian bug ID 552998.

	* magick/image.c (SetImageInfo): Don't check filename for scene
	substitution if adjoin is intentionally false.  This allows saving
	to file names which look like they contain a scene substitution
	pattern.

	* magick/command.c (MogrifyImage): Convolution failure results in
	a crash rather than an error report.  Resolves Debian bug ID
	539251.

	* magick/deprecate.c: The string constants LoadImageText,
	SaveImageText, LoadImagesText, and SaveImagesText should have been
	deprecated, rather than being entirely removed.

2010-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Makefile.am (install-data-html): Make sure that only the
	necessary documentation files are installed.

2010-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/body.isx: Strip out executable
	components which depend on proprietary MFC and ATL libraries.
	This means that "gmdisplay.exe" and "ImageMagickObject" are no
	longer distributed or installed via the Windows setup installer.
	When a new display application is developed based on open source
	libraries, then the display functionality and associations can be
	restored.

2010-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (FlattenImages): Apply the image background
	color under the initial canvas image if it is non-opaque.
