@@ -24,6 +24,9 @@
 2010-02-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/blob.c (OpenBlob): Only form multi-part filename when
+        required.
+
   <LI> magick/display.c (MagickXDisplayImage): The display '-update'
         option was only working in conjunction with the '-delay' option
         with a delay setting of 2 or greater.  Problem reported by Sami
