@@ -404,10 +404,11 @@ added.</li>
 <p>Behavior Changes:</p>
 <blockquote>
 <ul class="simple">
-<li>For formats supporting multiple frames, there is no longer an
-implicit 'adjoin' if an output filename contains an apparent scene
-specification (e.g. foo%02d.tiff).  It is necessary to use
-+adjoin.  For example <tt class="docutils literal"><span class="pre">gm</span> <span class="pre">convert</span> <span class="pre">foo.pdf</span> <span class="pre">+adjoin</span> <span class="pre">%02d.tiff</span></tt>.</li>
+<li>There is no longer an implicit 'adjoin' if an output filename
+contains an apparent scene specification (e.g. foo%02d.tiff) and
+multiple files are not needed to save the image..  It is necessary
+to use +adjoin.  For example <tt class="docutils literal"><span class="pre">gm</span> <span class="pre">convert</span> <span class="pre">foo.pdf</span> <span class="pre">+adjoin</span>
+<span class="pre">%02d.tiff</span></tt>.</li>
 <li>InitializeMagick() MUST be invoked prior to using any Magick API
 function.  Failure to do so will likely lead to an immediate
 application crash.  This is due to initialization and runtime
@@ -1308,7 +1309,7 @@ package; otherwise see <a class="reference external" href="http://www.graphicsma
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2010-02-03 16:54 UTC.
+Generated on: 2010-02-03 17:51 UTC.
 
 </div>
 </body>
